refactor: 型周りをAPIのものを使う
