# apps/api/src/gemini/dto/recognize-ingredients-response.dto.ts
@@ -1,0 +1,6 @@
+import { ApiProperty } from '@nestjs/swagger';
+
+export class RecognizeIngredientsResponseDto {
+  @ApiProperty({ example: ['トマト', '玉ねぎ', '鶏もも肉'], type: [String] })
+  ingredients: string[];
+}
